# Game-of-life

GameOfLife/: README.txt
GameOfLife/Source_Code/Linux_Version/01_SingleThread/src/: GameOfLife.cpp  Main.cpp  WorldRenderer.cpp  WorldRenderer.h
GameOfLife/Source_Code/Linux_Version/02_MultiThread/src/: GameOfLife.cpp  Main.cpp  WorldRenderer.cpp
GameOfLife/Source_Code/Linux_Version/03_Interactive/: CMakeLists.txt
GameOfLife/Source_Code/Linux_Version/03_Interactive/src/: GameOfLife.h  Main.cpp
GameOfLife/Source_Code/Windows_Version/InteractiveGoL/: GameOfLife.cpp  GameOfLife.h  InteractiveGoL.sln  InteractiveGoL.vcxproj  InteractiveGoL.vcxproj.filters  Main.cpp  WorldRenderer.cpp  WorldRenderer.h
GameOfLife/Source_Code/Windows_Version/MultiThreadGoL/: Cell.h  Main.cpp  MultiThreadGoL.sln  MultiThreadGoL.vcxproj
GameOfLife/Source_Code/Windows_Version/Previous_Results/: GoL_Launcher.pro  Log_Struct.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
GameOfLife/Source_Code/Windows_Version/SingleThreadGoL/: GameOfLife.cpp  Main.cpp  SingleThreadGoL.sln  SingleThreadGoL.vcxproj  SingleThreadGoL.vcxproj.filters  WorldRenderer.cpp
